fix polling source on mobile ad

--- a/assets/stylesheets/mobile-ad.css.scss
+++ b/assets/stylesheets/mobile-ad.css.scss
@@ -141,7 +141,7 @@ body {
 	margin-bottom: 5px;
 	.polling {
 		&.source {
-			display: block;
+			//display: block;
 			font-size: 11px;
 		}
 		font-size: 13px;
